--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,11 @@
             <li class="nav-item"><a class="nav-link" href="/artists">Artists</a></li>
             </li>
           </ul>
+
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"directors">Login</a></li>
+          </ul>
         </div>
 
 <!-- Using pills instead?
