--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -20,8 +20,7 @@
       <%= link_to image_tag(image_url, :class => "img-fluid circular_image"), "/vinyls/#{vinyl.id}" %>
   	</div>
 		<br><p>
-        <i><%= vinyl.title %></i><br>
-    		<%= vinyl.year %>
+        <i><%= vinyl.title %></i> (<%= vinyl.year %>)<br>
     	</p>
       
     </div>
