--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,32 +1,12 @@
 <%= stylesheet_link_tag 'vinyl_index' %>
 
-<br>
-
-  <% if flash[:error] %>
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-      </button>
-      <strong>Oh snap! </strong><%= flash[:error] %>
-    </div>
-  <% end %>
-
-  <% if flash[:success] %>
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-      </button>
-      <strong>Groovy! </strong><%= flash[:success] %>
-    </div>
-  <% end %>
-
 <h1 class="text-center">Collections</h1>
 
 <div class="container">
   <div class="row">
 
   <div class="mx-auto my-3">
-    <%= link_to "+ Add New Collection", "/collections/new", class: 'btn btn-primary' %>
+    <%= link_to "+ Create New Collection", "/collections/new", class: 'btn btn-primary' %>
   </div>
 
 
@@ -35,6 +15,7 @@
       <tr>
         <th>Collection</th>
         <th>Vinyls</th>
+        <th></th>
       </tr>
     </thead>
 
@@ -53,6 +34,18 @@
             </li>
           <% end %>
         </ul></td>
+
+        <td>
+          <div class="dropdown">
+            <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">  </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="/collections/<%=collection.id%>/edit">Edit</a>
+              <a class="dropdown-item" href="/collections/<%=collection.id%>" data-method="delete" data-confirm="Are you sure? All the records of your vinyls will be removed as well.">Delete</a>
+            </div>
+          </div>
+        </td>
+
+
       </tr>
       <% end %>
     </tbody>
