--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -8,34 +8,36 @@
 
 <div class="row">
 
-  <div class="col-sm-4 offset-sm-1">
+  <div class="col-sm-3 offset-sm-1">
     <%= image_tag vinyl.image_url, :class => "img-fluid" %>
   </div>
 
   <div class="col-sm-6">
-    <h2 class="text-center"><%= vinyl.title %></h2>
+    <h2><%= vinyl.title %> (<%= vinyl.year %>)</h2>
     <% if vinyl.artist.present? %>
-      <h3 class="text-muted text-center">
+      <h3 class="text-muted">
         <%= link_to vinyl.artist.name, "/artists/#{vinyl.artist.id}" %></h3>
+      <h5 class="text-muted">
+        <% if vinyl.runtime.present? %>
+        <%= "Runtime: #{vinyl.runtime} min" %>
+        <% end %>
+      </h5>
     <% end %>
 
+    <% if session[:user_id] != nil %>
+      <% @user = User.find_by(:id => session[:user_id]) %>
 
-  <table class="table table-light">
-    <tbody>
-      <tr>
-        <th>Year</th>
-        <td><%= vinyl.year %></td>
-      </tr>
-      <tr>
-        <th>Runtime</th>
-        <td>
-          <% if vinyl.runtime.present? %>
-          <%= "#{vinyl.runtime} min" %>
-          <% end %>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+      <br>
+      <p>This record is in these collections:</p>
+
+      <ul>
+        <% @user.collections.order('name').each do |collection| %>
+            <% if collection.vinyls.find_by(:id => vinyl.id) %>
+              <li><%= link_to collection.name, "/collections/#{collection.id}" %></li>
+            <% end %>
+        <% end %>
+      </ul>
+    <% end %>
 
 
   </div>
