--- a/app/views/collections/edit.html.erb
+++ b/app/views/collections/edit.html.erb
@@ -16,7 +16,7 @@
         <input name="name" type="text" autofocus class="form-control" value="<%= collection.name %>">
     	</p>
       
-      <button class="btn btn-secondary btn-block">Update Artist</button>
+      <button class="btn btn-secondary btn-block">Update Collection Name</button>
       <%= link_to "Cancel", "/collections", class: 'btn btn-secondary btn-block' %>
 
     <% end %>
