--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -2,25 +2,31 @@
 
 <h1 class="text-center">Collections</h1>
 
+<% if session[:user_id] != nil %>
+
 <div class="container">
   <div class="row">
 
   <div class="mx-auto my-3">
     <%= link_to "+ Create New Collection", "/collections/new", class: 'btn btn-primary' %>
   </div>
+  </div>
 
+
+  <% if not @collections.empty? %>
+  <div class="row">
 
   <table class="table table-hover">
     <thead class="thead-dark">
       <tr>
         <th>Collection</th>
         <th>Vinyls</th>
-        <th></th>
+        <th>Actions</th>
       </tr>
     </thead>
 
     <tbody>  
-      <% Collection.all.order('name').each do |collection| %>
+      <% @collections.each do |collection| %>
       <tr>
         <td><%= link_to collection.name, "/collections/#{collection.id}" %>
         </td>
@@ -39,8 +45,8 @@
           <div class="dropdown">
             <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">  </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="/collections/<%=collection.id%>/edit">Edit</a>
-              <a class="dropdown-item" href="/collections/<%=collection.id%>" data-method="delete" data-confirm="Are you sure? All the records of your vinyls will be removed as well.">Delete</a>
+              <a class="dropdown-item" href="/collections/<%=collection.id%>/edit">Edit Name</a>
+              <a class="dropdown-item" href="/collections/<%=collection.id%>" data-method="delete" data-confirm="Are you sure you want to delete the collection?">Delete</a>
             </div>
           </div>
         </td>
@@ -50,10 +56,25 @@
       <% end %>
     </tbody>
   </table>
+</div>
 
+
+  <% else %>
+  <div class="row">
+    <div class="col-sm-4 offset-sm-4 text-center">
+      <br>
+      <i>You don't have any collections yet.<br>Why not add one now?</i>
+    </div>
   </div>
+  <% end %>
   
 
   </div>
 </div>
+
+<% else %> 
+  <p class="text-center">
+    <%= link_to "Log in", "/sessions/new" %> to access the collections page.
+  </p>
+<% end %>
 
