--- a/app/views/vinyls/new.html.erb
+++ b/app/views/vinyls/new.html.erb
@@ -19,7 +19,8 @@
       <p>Album Art:
         <input name="image_url" type="text" class="form-control"></p>
 
-      <p>Artist: <span class="required">*</span> <br>
+      <p>Artist: <span class="required">*</span> 
+        <i>(Artist not listed? Add <a href="/artists/new">here</a>.)</i><br>
         <!-- search form function, if not exist, add -->
           <select name="artist_id" class="form-control" required>
             <option value="" disabled selected>Select an Artist</option>
