--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -13,7 +13,7 @@
   </div>
 
 
-  <% if not @collections.empty? %>
+  <% if not @collections.nil? and not @collections.empty? %>
   <div class="row">
 
   <table class="table table-hover">
