--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
 
           <ul class="navbar-nav ml-auto">
               <% if session[:user_id] != nil %>
-                <li class="nav-item"><%= link_to "My Account", "/users/#{session[:user_id]}" %></li>
+                <li class="nav-item"><a class="nav-link" href="/users/<%= session[:user_id] %>"><%= User.find_by(id: session[:user_id]).email %></a></li>
                 <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
               <% else %>
                 <li class="nav-item"><a class="nav-link" href="/users/new">Sign Up</a></li>
