--- a/app/views/vinyls/show.html.erb
+++ b/app/views/vinyls/show.html.erb
@@ -66,7 +66,7 @@
       <% if vinyl.artist.present? %>
         <ul>
           <% vinyl.artist.vinyls.each do |vinyl| %>
-            <li><%= link_to vinyl.title, "/vinyl/#{vinyl.id}" %></li>
+            <li><%= link_to vinyl.title, "/vinyls/#{vinyl.id}" %></li>
           <% end %>
         </ul>
       <% end %>
